General logging changes Added email function to alert using php mail() 	Parameters pulled from config.ini 		-admin_email_to 		-admin_email_from

--- a/config.ini
+++ b/config.ini
@@ -1,12 +1,28 @@
-; This is a sample configuration file
-; Comments start with ';', as in php.ini
+; Config parameters
 
+; Duh!
 [logging]
-days_to_log=30
-time_zone=GMT
 
+	;number of days to keep logs
+	days_to_log=30
+
+	;time zone for logging ( http://www.php.net/manual/en/timezones.php ) 
+	time_zone=GMT
+
+; How to handle matches
 [call_handling]
-;options here are busy/msg
-on_redirect_match=busy
-reject_message="I am sorry but you are not authorized to call this number, please contact your manager if you feel this is a mistake"
-redirect_application_url="sip:callxml@127.0.0.1"
+	
+	;options here are busy/msg
+	on_redirect_match=msg
+	
+	;message to present to caller, apply applies if on_redirect_match=msg
+	reject_message="I am sorry but you are not authorized to call this number, please contact your manager if you feel this is a mistake"
+	
+	;application URL to redirect caller to, generally this is the default route 
+	redirect_application_url="sip:awesome@127.0.0.1"
+
+; If you have two duplicate numbers the application will error (gracefully) and you will
+; get an error email
+[error_handling]
+	admin_email_to="jdyer@voxeo.com"
+	admin_email_from="jdyer@voxeo.com"
