Changed to redirect Tel for Rob

--- a/config/config.ini
+++ b/config/config.ini
@@ -19,7 +19,7 @@
 	reject_message="I am sorry but you are not authorized to call this number, please contact your manager if you feel this is a mistake"
 	
 	;application URL to redirect caller to, generally this is the default route 
-	redirect_application_url="sip:awesome@127.0.0.1"
+	redirect_application_url="tel:+14074555200"
 
 ; If you have two duplicate numbers the application will error (gracefully) and you will
 ; get an error email
